// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`global/components/meta/Item matches the snapshot 1`] = `
<Fragment>
  <span
    className="meta-label"
  >
    a metadata property
  </span>
  <div
    className="meta-value"
    dangerouslySetInnerHTML={
      Object {
        "__html": "A Metadata Value",
      }
    }
  />
</Fragment>
`;

exports[`global/components/meta/Item when passed a child component matches the snapshot 1`] = `
<Fragment>
  <span
    className="meta-label"
  >
    a metadata property
  </span>
  <div
    className="meta-value"
  >
    <div>
      A Metadata Value
    </div>
  </div>
</Fragment>
`;
